@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Apr 17 14:14:05 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sat Apr 17 21:13:56 2004 -->
 
-<application path="../../resources/dialogs/status.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/status.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="AudioControlPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="AudioControlsSizer" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
             <object class="sizeritem">
-                <flag>wxEXPAND</flag>
-                <border>0</border>
+                <flag>wxALL|wxEXPAND</flag>
+                <border>5</border>
                 <option>1</option>
                 <object class="wxStaticBoxSizer" name="SoundSizer" base="EditStaticBoxSizer">
                     <orient>wxVERTICAL</orient>
@@ -45,8 +45,8 @@
                 </object>
             </object>
             <object class="sizeritem">
-                <flag>wxEXPAND</flag>
-                <border>0</border>
+                <flag>wxALL|wxEXPAND</flag>
+                <border>5</border>
                 <option>0</option>
                 <object class="wxStaticBoxSizer" name="SoundIOSizer" base="EditStaticBoxSizer">
                     <orient>wxHORIZONTAL</orient>
