@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Apr 17 13:52:01 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sat Apr 17 21:00:58 2004 -->
 
-<application path="../../resources/dialogs/catapult.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/catapult.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="CatapultFrame" name="CatapultFrame" base="EditFrame">
         <style>wxDEFAULT_FRAME_STYLE</style>
         <title>openMSX Catapult</title>
@@ -46,7 +46,7 @@
                                             <option>0</option>
                                             <object class="wxButton" name="Launch_AbortButton" base="EditButton">
                                                 <tooltip>Start or stop emulation of the selected hardware</tooltip>
-                                                <label>Launch</label>
+                                                <label>Start</label>
                                             </object>
                                         </object>
                                     </object>
