@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Apr 17 15:09:37 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sat Apr 17 21:28:08 2004 -->
 
-<application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="MiscControlPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="ControlsPageSizer" base="EditBoxSizer">
@@ -20,7 +20,8 @@
                         <object class="wxBoxSizer" name="PerformanceLabelSizer" base="EditBoxSizer">
                             <orient>wxVERTICAL</orient>
                             <object class="sizeritem">
-                                <border>0</border>
+                                <flag>wxLEFT</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="SpeedLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
@@ -36,8 +37,8 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxLEFT|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="FrameSkipLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
@@ -53,8 +54,8 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxLEFT|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="ThrottleLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
@@ -171,8 +172,8 @@
                                 <object class="wxBoxSizer" name="PerformanceButtonsSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>0</border>
+                                        <flag>wxLEFT|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
                                         <option>0</option>
                                         <object class="wxToggleButton" name="ThrottleButton" base="EditToggleButton">
                                             <tooltip>Turn off for maximum speed</tooltip>
@@ -279,7 +280,7 @@
                 </object>
             </object>
             <object class="sizeritem">
-                <flag>wxEXPAND</flag>
+                <flag>wxALL|wxEXPAND</flag>
                 <border>5</border>
                 <option>0</option>
                 <object class="wxStaticBoxSizer" name="ConnectorSizer" base="EditStaticBoxSizer">
@@ -292,7 +293,7 @@
                         <object class="wxBoxSizer" name="Joyport1LabelSizer" base="EditBoxSizer">
                             <orient>wxVERTICAL</orient>
                             <object class="sizeritem">
-                                <flag>wxALIGN_CENTER_VERTICAL</flag>
+                                <flag>wxLEFT|wxALIGN_CENTER_VERTICAL</flag>
                                 <border>0</border>
                                 <option>1</option>
                                 <object class="wxStaticText" name="Joystick1Label" base="EditStaticText">
