@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sat Apr 17 17:36:36 2004 -->
+<!-- generated by wxGlade 0.3.2 on Sat Apr 17 22:00:10 2004 -->
 
 <application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="VideoControlPage" base="EditTopLevelPanel">
@@ -7,15 +7,15 @@
         <object class="wxBoxSizer" name="VideoControlsSizer" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
             <object class="sizeritem">
-                <flag>wxEXPAND</flag>
-                <border>0</border>
-                <option>1</option>
+                <flag>wxALL|wxEXPAND</flag>
+                <border>5</border>
+                <option>0</option>
                 <object class="wxStaticBoxSizer" name="VideoSwitchesSizer" base="EditStaticBoxSizer">
                     <orient>wxVERTICAL</orient>
                     <label>Switches</label>
                     <object class="sizeritem">
-                        <flag>wxALL|wxEXPAND</flag>
-                        <border>5</border>
+                        <flag>wxEXPAND</flag>
+                        <border>0</border>
                         <option>0</option>
                         <object class="wxBoxSizer" name="VideoSwitchSizer" base="EditBoxSizer">
                             <orient>wxHORIZONTAL</orient>
@@ -340,8 +340,8 @@
                 </object>
             </object>
             <object class="sizeritem">
-                <flag>wxEXPAND</flag>
-                <border>0</border>
+                <flag>wxALL|wxEXPAND</flag>
+                <border>5</border>
                 <option>1</option>
                 <object class="wxStaticBoxSizer" name="sizer_4" base="EditStaticBoxSizer">
                     <orient>wxHORIZONTAL</orient>
@@ -353,14 +353,14 @@
                         <object class="wxBoxSizer" name="VideoAdjustLabelSizer" base="EditBoxSizer">
                             <orient>wxVERTICAL</orient>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="BlurLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>0</border>
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
                                         <option>0</option>
                                         <object class="wxStaticText" name="BlurLabel" base="EditStaticText">
                                             <attribute>1</attribute>
@@ -370,14 +370,14 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="GlowLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>0</border>
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
                                         <option>0</option>
                                         <object class="wxStaticText" name="GlowLabel" base="EditStaticText">
                                             <attribute>1</attribute>
@@ -387,14 +387,14 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="GammaLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>0</border>
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
                                         <option>0</option>
                                         <object class="wxStaticText" name="GammaLabel" base="EditStaticText">
                                             <attribute>1</attribute>
@@ -410,8 +410,8 @@
                                 <object class="wxBoxSizer" name="ScanlinesLabelSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>0</border>
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
                                         <option>0</option>
                                         <object class="wxStaticText" name="ScanLineLabel" base="EditStaticText">
                                             <attribute>1</attribute>
@@ -429,13 +429,13 @@
                         <object class="wxBoxSizer" name="VideoAdjustSliderSizer" base="EditBoxSizer">
                             <orient>wxVERTICAL</orient>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="BlurSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>1</option>
                                         <object class="wxSlider" name="BlurSlider" base="EditSlider">
@@ -446,7 +446,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxTextCtrl" name="BlurIndicator" base="EditTextCtrl">
@@ -454,7 +454,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxButton" name="ZeroBlurButton" base="EditButton">
@@ -465,13 +465,13 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="GlowSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>1</option>
                                         <object class="wxSlider" name="GlowSlider" base="EditSlider">
@@ -482,7 +482,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxTextCtrl" name="GlowIndicator" base="EditTextCtrl">
@@ -490,7 +490,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxButton" name="ZeroGlowButton" base="EditButton">
@@ -501,13 +501,13 @@
                                 </object>
                             </object>
                             <object class="sizeritem">
-                                <flag>wxEXPAND</flag>
-                                <border>0</border>
+                                <flag>wxBOTTOM|wxEXPAND</flag>
+                                <border>5</border>
                                 <option>1</option>
                                 <object class="wxBoxSizer" name="GammaSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>1</option>
                                         <object class="wxSlider" name="GammaSlider" base="EditSlider">
@@ -518,7 +518,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxTextCtrl" name="GammaIndicator" base="EditTextCtrl">
@@ -526,7 +526,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxButton" name="DefaultGammaButton" base="EditButton">
@@ -543,7 +543,7 @@
                                 <object class="wxBoxSizer" name="ScanlineSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>1</option>
                                         <object class="wxSlider" name="ScanLineSlider" base="EditSlider">
@@ -554,7 +554,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxTextCtrl" name="ScanlineIndicator" base="EditTextCtrl">
@@ -562,7 +562,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <flag>wxLEFT|wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxButton" name="ZeroScanlineButton" base="EditButton">
